Login and Registration done with roles

--- a/PlaywriteOccupationTherapy/Client/Pages/Home/Index.razor
+++ b/PlaywriteOccupationTherapy/Client/Pages/Home/Index.razor
@@ -1,10 +1,23 @@
 ﻿@page "/"
 
+@using Syncfusion.Blazor.Spinner 
+
 @attribute [Authorize]
 
 <AuthorizeView>
-    <Authorized>Hello, World!</Authorized>
+    <Authorized>
+        Authorized
+        <br />
+        Name: @context.User.Identity.Name
+        <br />
+        General Admin: @context.User.IsInRole("GeneralAdmin")
+        <br />
+        Super Admin: @context.User.IsInRole("SuperAdmin")
+        <br />
+        General User: @context.User.IsInRole("GeneralUser")
+    </Authorized>
     <Authorizing></Authorizing>
     <NotAuthorized>Not Authorized</NotAuthorized>
 </AuthorizeView>
+
 
