--- a/PlaywriteOccupationTherapy/Client/Shared/MainLayout.razor
+++ b/PlaywriteOccupationTherapy/Client/Shared/MainLayout.razor
@@ -14,11 +14,10 @@
                     Authorizing...
                 </Authorizing>
                 <NotAuthorized>
-                    
+                    <button class="btn btn-primary btn-sm"><i class="oi oi-account-login"></i>&nbsp;&nbsp;Login</button>
                 </NotAuthorized>
             </AuthorizeView>
         </div>
-
         <div class="content px-4">
             @Body
         </div>
