--- a/PlaywriteOccupationTherapy/Client/_Imports.razor
+++ b/PlaywriteOccupationTherapy/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using PlaywriteOccupationTherapy.Client.Shared.Models
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+@using Syncfusion.Blazor
