--- a/PlaywriteOccupationTherapy/Client/Pages/Login/Login.razor
+++ b/PlaywriteOccupationTherapy/Client/Pages/Login/Login.razor
@@ -1,8 +1,13 @@
 ﻿@page "/login"
-
 @inject NavigationManager navManager
 @inject HttpClient Http
 
+@using Syncfusion.Blazor.Notifications
+@using Syncfusion.Blazor.Inputs 
+
+<SfToast @ref="ToastObject">
+    <ToastPosition X="Right" Y="Top"></ToastPosition>
+</SfToast>
 <AuthorizeView>
     <Authorized>You are already logged in...</Authorized>
     <Authorizing>
@@ -10,30 +15,30 @@
     </Authorizing>
     <NotAuthorized>
         <h5>Login Here!</h5>
-        <p class="alert-warning">@Error</p>
-        <input class="form-control" @bind-value="loginUser.Username" type="text" />
+        <SfTextBox FloatLabelType="FloatLabelType.Always" Type="InputType.Text" @bind-Value="loginUser.Username" Placeholder="Email Address" />
         <br />
-        <input class="form-control" @bind-value="loginUser.Password" type="password" />
+        <SfTextBox FloatLabelType="FloatLabelType.Always" Type="InputType.Password" @bind-Value="loginUser.Password" Placeholder="Password" />
         <br />
-        <button @onclick="LoginUser" class="btn btn-primary">Login</button>
+        <br />
+        <button @onclick="LoginUser" class="btn btn-primary btn-sm"><i class="oi oi-account-login"></i>&nbsp;&nbsp;Login</button>
     </NotAuthorized>
 </AuthorizeView>
 
 @code {
 
     private LoginModel loginUser = new();
-    private string Error { get; set; }
+    private SfToast ToastObject;
 
     private async Task LoginUser()
     {
-        var response = await Http.PostAsJsonAsync("api/user/loginuser", loginUser);
+        var response = await Http.PostAsJsonAsync<LoginModel>("api/user/loginuser", loginUser);
         if (response.IsSuccessStatusCode)
         {
             navManager.NavigateTo("/", true);
         }
         else
         {
-            Error = "Invalid Credentials. Please try again!";
+            await this.ToastObject.ShowAsync(new ToastModel { Title = "Attention", Content = "Invalid Credentials. Please try again!", CssClass = "e-toast-warning", ShowCloseButton = true });
         }
     }
 }
