--- a/PlaywriteOccupationTherapy/Client/Shared/NavMenu.razor
+++ b/PlaywriteOccupationTherapy/Client/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿@inject HttpClient Http
+﻿@using PlaywriteOccupationTherapy.Client.Shared.Authentication 
+@inject HttpClient Http
 @inject NavigationManager navManager
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Playwrite</a>
@@ -16,7 +17,7 @@
         </li>
         <AuthorizeView>
             <Authorized>
-                <li class="nav-item px-3">
+                <li class="nav-item px-3" style="cursor: pointer">
                     <NavLink class="nav-link" @onclick="Logout" Match="NavLinkMatch.All">
                         <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
                     </NavLink>
@@ -26,6 +27,11 @@
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="login" Match="NavLinkMatch.All">
                         <span class="oi oi-account-login" aria-hidden="true"></span> Login
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="register" Match="NavLinkMatch.All">
+                        <span class="oi oi-pencil" aria-hidden="true"></span> Register
                     </NavLink>
                 </li>
             </NotAuthorized>
@@ -46,6 +52,6 @@
     private async Task Logout()
     {
         await Http.GetAsync("api/user/logoutuser");
-        navManager.NavigateTo("/", true);
+        navManager.NavigateTo("login", true);
     }
 }
