--- a/PlaywriteOccupationTherapy/Client/Shared/NavMenu.razor.css
+++ b/PlaywriteOccupationTherapy/Client/Shared/NavMenu.razor.css
@@ -1,10 +1,10 @@
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #455b62;
 }
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: #455b62;
 }
 
 .navbar-brand {
@@ -32,7 +32,7 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: #f7f7f7;
         border-radius: 4px;
         height: 3rem;
         display: flex;
