--- a/PlaywriteOccupationTherapy/Client/Shared/MainLayout.razor.css
+++ b/PlaywriteOccupationTherapy/Client/Shared/MainLayout.razor.css
@@ -9,11 +9,11 @@
 }
 
 .sidebar {
-    background-color: #455b62;
+    background-color: #586574;
 }
 
 .top-row {
-    background-color: #455b62;
+    background-color: #586574;
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
