--- a/PlaywriteOccupationTherapy/Client/Shared/NavMenu.razor.css
+++ b/PlaywriteOccupationTherapy/Client/Shared/NavMenu.razor.css
@@ -1,10 +1,11 @@
 .navbar-toggler {
-    background-color: #455b62;
+    background-color: #586574;
+    border: none;
 }
 
 .top-row {
     height: 3.5rem;
-    background-color: #455b62;
+    background-color: #586574;
 }
 
 .navbar-brand {
